# sentence-transformers-burn

./: Cargo.toml
src/: bert_loader.rs  lib.rs
src/model/: bert_embeddings.rs  bert_encoder.rs  bert_model.rs
tests/: load_and_compare.rs
