[package]
name = "sentence_transformers"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.7"
npy = "0.4.0"
ndarray = "0.15.6"
npy-derive = "0.4.0"
serde = "1"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.7"
serde_json = "1.0.105"
burn = { version = "0.13.2", features = ["candle", "accelerate", "wgpu", "tch"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["accelerate", "metal"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "throughput_test"
path = "src/bin/throughput_test.rs"
